--- a/home/dot_zprezto/runcoms/zshrc.tmpl
+++ b/home/dot_zprezto/runcoms/zshrc.tmpl
@@ -153,12 +153,13 @@ if type brew &>/dev/null; then
   compinit
 fi
 
-
+{{- if eq .chezmoi.hostname "kai-private" }}
 # ---------------------------------------------------------
 # mise setting
 # ---------------------------------------------------------
 eval "$(mise activate zsh)"
 export MISE_NODE_COREPACK=true
+{{- end }}
 
 
 # ---------------------------------------------------------
@@ -342,6 +343,8 @@ alias dcrrb='docker-compose run --rm bash'
 alias dcea='docker-compose exec app'
 alias dceab='docker-compose exec app bash'
 
+# 業務で有効化する設定
+{{- if eq .chezmoi.hostname "kai-caddi" }}
 # enable volta
 export VOLTA_HOME="$HOME/.volta"
 export PATH="$VOLTA_HOME/bin:$PATH"
@@ -352,8 +355,8 @@ if [ -f '/Users/kai_takabe/google-cloud-sdk/path.zsh.inc' ]; then . '/Users/kai_
 # The next line enables shell command completion for gcloud.
 if [ -f '/Users/kai_takabe/google-cloud-sdk/completion.zsh.inc' ]; then . '/Users/kai_takabe/google-cloud-sdk/completion.zsh.inc'; fi
 
-
 # enable postgresql client
 export PATH="/opt/homebrew/opt/libpq/bin:$PATH"
 export LDFLAGS="-L/opt/homebrew/opt/libpq/lib"
 export CPPFLAGS="-I/opt/homebrew/opt/libpq/include"
+{{- end }}
