add: update Brewfile template with additional Homebrew packages and VSCode extensions

--- a/home/dot_config/homebrew/Brewfile.tmpl
+++ b/home/dot_config/homebrew/Brewfile.tmpl
@@ -7,8 +7,10 @@ brew "fzf"
 brew "gh"
 brew "ghq"
 brew "git"
+brew "git-delta"
 brew "jq"
 brew "lazygit"
+brew "libpq"
 brew "lsd"
 brew "mise"
 brew "neovim"
@@ -17,17 +19,21 @@ brew "starship"
 brew "tmux"
 brew "xcodes"
 brew "zsh-completions"
-cask "1password"
+cask "1password-cli"
+cask "amethyst"
 cask "arc"
 cask "chatgpt"
 cask "clipy"
 cask "docker"
 cask "font-hack-nerd-font"
+cask "graphql-playground"
 cask "iterm2"
+cask "jetbrains-toolbox"
+cask "lg-onscreen-control"
 cask "logi-options+"
 cask "obsidian"
-cask "visual-studio-code"
 cask "wezterm"
+cask "xbar"
 vscode "42crunch.vscode-openapi"
 vscode "apollographql.vscode-apollo"
 vscode "bierner.markdown-mermaid"
@@ -52,6 +58,7 @@ vscode "genieai.chatgpt-vscode"
 vscode "github.copilot"
 vscode "github.copilot-chat"
 vscode "github.vscode-github-actions"
+vscode "github.vscode-pull-request-github"
 vscode "golang.go"
 vscode "hediet.vscode-drawio"
 vscode "htmlhint.vscode-htmlhint"
@@ -65,6 +72,7 @@ vscode "lokalise.i18n-ally"
 vscode "mads-hartmann.bash-ide-vscode"
 vscode "mgmcdermott.vscode-language-babel"
 vscode "ms-azuretools.vscode-docker"
+vscode "ms-ceintl.vscode-language-pack-ja"
 vscode "ms-playwright.playwright"
 vscode "ms-python.debugpy"
 vscode "ms-python.isort"
@@ -73,6 +81,7 @@ vscode "ms-python.vscode-pylance"
 vscode "ms-vscode-remote.remote-containers"
 vscode "ms-vscode-remote.remote-ssh"
 vscode "ms-vscode-remote.remote-ssh-edit"
+vscode "ms-vscode-remote.remote-wsl"
 vscode "ms-vscode-remote.vscode-remote-extensionpack"
 vscode "ms-vscode.cpptools"
 vscode "ms-vscode.makefile-tools"
@@ -89,10 +98,12 @@ vscode "redhat.vscode-yaml"
 vscode "redocly.openapi-vs-code"
 vscode "ritwickdey.liveserver"
 vscode "smelukov.vscode-csstree"
+vscode "sourcegraph.cody-ai"
 vscode "streetsidesoftware.code-spell-checker"
 vscode "styled-components.vscode-styled-components"
 vscode "stylelint.vscode-stylelint"
 vscode "taichi.vscode-textlint"
+vscode "tamasfe.even-better-toml"
 vscode "techer.open-in-browser"
 vscode "typespec.typespec-vscode"
 vscode "usernamehw.errorlens"
