--- a/home/dot_config/homebrew/Brewfile.tmpl
+++ b/home/dot_config/homebrew/Brewfile.tmpl
@@ -10,9 +10,13 @@ brew "git"
 brew "git-delta"
 brew "jq"
 brew "lazygit"
+{{- if eq .chezmoi.hostname "kai-caddi" }}
 brew "libpq"
+{{- end }}
 brew "lsd"
+{{- if eq .chezmoi.hostname "kai-private" }}
 brew "mise"
+{{- end }}
 brew "neovim"
 brew "ripgrep"
 brew "starship"
@@ -27,7 +31,6 @@ cask "clipy"
 cask "docker"
 cask "font-hack-nerd-font"
 cask "graphql-playground"
-cask "iterm2"
 cask "jetbrains-toolbox"
 cask "lg-onscreen-control"
 cask "logi-options+"
