update: fix file copy path in Obsidian Vim configuration script for specific host

--- a/home/.chezmoiscripts/run_after_04_link-obsidian-vimrc.sh.tmpl
+++ b/home/.chezmoiscripts/run_after_04_link-obsidian-vimrc.sh.tmpl
@@ -1,6 +1,6 @@
 {{ if eq .chezmoi.hostname "kai-private" -}}
 #!/bin/zsh
 
-cp -f "~/.config/obsidian/.obsidian.vimrc" \
-       "$HOME/Library/Mobile Documents/iCloud~md~obsidian/Documents/Kai/dot_obsidian.vimrc"
+cp -f "$HOME/.config/obsidian/.obsidian.vimrc" \
+       "$HOME/Library/Mobile Documents/iCloud~md~obsidian/Documents/Kai"
 {{- end }}
