--- a/home/dot_config/homebrew/Brewfile.tmpl
+++ b/home/dot_config/homebrew/Brewfile.tmpl
@@ -22,18 +22,24 @@ brew "starship"
 brew "tmux"
 brew "xcodes"
 brew "zsh-completions"
+brew "hashicorp/tap/terraform"
+cask "1password"
 cask "1password-cli"
 cask "amethyst"
 cask "arc"
+cask "brave-browser"
 cask "chatgpt"
-cask "clipy"
+cask "cursor"
 cask "docker"
 cask "font-hack-nerd-font"
+cask "google-chrome"
 cask "graphql-playground"
+cask "hyperkey"
 cask "jetbrains-toolbox"
-cask "lg-onscreen-control"
 cask "logi-options+"
 cask "obsidian"
+cask "raycast"
+cask "visual-studio-code"
 cask "wezterm"
 cask "xbar"
 vscode "42crunch.vscode-openapi"
