add: update Brewfile template to include additional taps and casks

--- a/home/dot_config/homebrew/Brewfile.tmpl
+++ b/home/dot_config/homebrew/Brewfile.tmpl
@@ -1,4 +1,6 @@
+tap "hashicorp/tap"
 tap "homebrew/bundle"
+tap "nikitabobko/tap"
 brew "aws-sam-cli"
 brew "bat"
 brew "chezmoi"
@@ -25,6 +27,7 @@ brew "zsh-completions"
 brew "hashicorp/tap/terraform"
 cask "1password"
 cask "1password-cli"
+cask "aerospace"
 cask "amethyst"
 cask "arc"
 cask "brave-browser"
