--- a/home/dot_config/homebrew/Brewfile.tmpl
+++ b/home/dot_config/homebrew/Brewfile.tmpl
@@ -44,7 +44,6 @@ cask "obsidian"
 cask "raycast"
 cask "visual-studio-code"
 cask "wezterm"
-cask "xbar"
 vscode "42crunch.vscode-openapi"
 vscode "apollographql.vscode-apollo"
 vscode "bierner.markdown-mermaid"
@@ -56,6 +55,7 @@ vscode "cschlosser.doxdocgen"
 vscode "dbaeumer.vscode-eslint"
 vscode "devcycle.devcycle-feature-flags"
 vscode "devsense.intelli-php-vscode"
+vscode "docker.docker"
 vscode "donjayamanne.githistory"
 vscode "eamodio.gitlens"
 vscode "ecmel.vscode-html-css"
@@ -71,6 +71,7 @@ vscode "github.copilot-chat"
 vscode "github.vscode-github-actions"
 vscode "github.vscode-pull-request-github"
 vscode "golang.go"
+vscode "hashicorp.terraform"
 vscode "hediet.vscode-drawio"
 vscode "htmlhint.vscode-htmlhint"
 vscode "humao.rest-client"
@@ -108,6 +109,7 @@ vscode "rangav.vscode-thunder-client"
 vscode "redhat.vscode-yaml"
 vscode "redocly.openapi-vs-code"
 vscode "ritwickdey.liveserver"
+vscode "saoudrizwan.claude-dev"
 vscode "smelukov.vscode-csstree"
 vscode "sourcegraph.cody-ai"
 vscode "streetsidesoftware.code-spell-checker"
