--- a/home/dot_config/homebrew/Brewfile.tmpl
+++ b/home/dot_config/homebrew/Brewfile.tmpl
@@ -18,6 +18,7 @@ brew "libpq"
 {{- end }}
 brew "lsd"
 brew "mise"
+brew "navi"
 brew "neovim"
 brew "ripgrep"
 brew "starship"
@@ -33,8 +34,10 @@ cask "arc"
 cask "brave-browser"
 cask "chatgpt"
 cask "cursor"
+cask "discord"
 cask "docker"
 cask "font-hack-nerd-font"
+cask "gitkraken"
 cask "google-chrome"
 cask "graphql-playground"
 cask "hyperkey"
@@ -44,6 +47,8 @@ cask "obsidian"
 cask "raycast"
 cask "visual-studio-code"
 cask "wezterm"
+cask "zoom"
+vscode "3w36zj6.textlint"
 vscode "42crunch.vscode-openapi"
 vscode "apollographql.vscode-apollo"
 vscode "bierner.markdown-mermaid"
@@ -115,7 +120,6 @@ vscode "sourcegraph.cody-ai"
 vscode "streetsidesoftware.code-spell-checker"
 vscode "styled-components.vscode-styled-components"
 vscode "stylelint.vscode-stylelint"
-vscode "taichi.vscode-textlint"
 vscode "tamasfe.even-better-toml"
 vscode "techer.open-in-browser"
 vscode "typespec.typespec-vscode"
