--- a/home/dot_zprezto/runcoms/zshrc.tmpl
+++ b/home/dot_zprezto/runcoms/zshrc.tmpl
@@ -194,20 +194,19 @@ alias grep='rg'
 # ---------------------------------------------------------
 # fzf setting
 # ---------------------------------------------------------
-# Set up fzf key bindings and fuzzy completion
-source <(fzf --zsh)
 
-# fzfのカラーテーマを One Darkに設定
-local fzf_color_theme=$(cat <<"EOF"
---color=fg:#D8DEE9,bg:#2E3440,hl:#A3BE8C,fg+:#D8DEE9,bg+:#434C5E,hl+:#A3BE8C
---color=pointer:#BF616A,info:#4C566A,spinner:#4C566A,header:#4C566A,prompt:#81A1C1,marker:#EBCB8B
-EOF
-)
+# fzfのカラーテーマを Nord に設定
+export FZF_DEFAULT_OPTS=$FZF_DEFAULT_OPTS'
+  --color=fg:#d8dee9,bg:#2e3440,hl:#a3be8c
+  --color=fg+:#d8dee9,bg+:#434c5e,hl+:#a3be8c
+  --color=info:#4c566a,prompt:#81a1c1,pointer:#bf616a
+  --color=marker:#EBCB8B,spinner:#4c566a,header:#4c566a
+'
 
 local find_ignore="find ./ -type d \( -name '.git' -o -name 'node_modules' \) -prune -o -type"
 
 # fzfのデフォルトで反映するオプションを設定する
-export FZF_DEFAULT_OPTS=$(cat <<EOF
+export FZF_DEFAULT_OPTS=$FZF_DEFAULT_OPTS$(cat <<EOF
 --multi
 --height=60%
 --select-1
@@ -240,6 +239,9 @@ export FZF_TMUX=1
 export FZF_TMUX_OPTS="-p 80%"
 
 export FZF_BASE=$HOME/.fzf
+
+# Set up fzf key bindings and fuzzy completion
+source <(fzf --zsh)
 
 ZSH_AUTOSUGGEST_HIGHLIGHT_STYLE="fg=#bbbbbb,bold,underline"
 
@@ -340,6 +342,13 @@ alias dcexec='docker-compose exec'
 alias dcrrb='docker-compose run --rm bash'
 alias dcea='docker-compose exec app'
 alias dceab='docker-compose exec app bash'
+
+
+# ---------------------------------------------------------
+# navi setting
+# ---------------------------------------------------------
+export NAVI_PATH='~/.local/share/navi'
+export NAVI_CONFIG='~/.config/navi/config.yaml'
 
 # 業務で有効化する設定
 {{- if eq .chezmoi.hostname "kai-caddi" }}
