update: brewで管理しているパッケージを更新

--- a/home/dot_config/homebrew/Brewfile.tmpl
+++ b/home/dot_config/homebrew/Brewfile.tmpl
@@ -35,13 +35,14 @@ cask "brave-browser"
 cask "chatgpt"
 cask "cursor"
 cask "discord"
-cask "docker"
+cask "docker-desktop"
 cask "font-hack-nerd-font"
 cask "gitkraken"
 cask "google-chrome"
 cask "graphql-playground"
 cask "hyperkey"
 cask "jetbrains-toolbox"
+cask "linear-linear"
 cask "logi-options+"
 cask "obsidian"
 cask "raycast"
@@ -50,6 +51,7 @@ cask "wezterm"
 cask "zoom"
 vscode "3w36zj6.textlint"
 vscode "42crunch.vscode-openapi"
+vscode "anthropic.claude-code"
 vscode "apollographql.vscode-apollo"
 vscode "bierner.markdown-mermaid"
 vscode "bodil.file-browser"
@@ -81,6 +83,7 @@ vscode "hediet.vscode-drawio"
 vscode "htmlhint.vscode-htmlhint"
 vscode "humao.rest-client"
 vscode "jacobdufault.fuzzy-search"
+vscode "janisdd.vscode-edit-csv"
 vscode "jock.svg"
 vscode "kahole.magit"
 vscode "kisstkondoros.vscode-gutter-preview"
@@ -88,6 +91,7 @@ vscode "leizongmin.node-module-intellisense"
 vscode "lokalise.i18n-ally"
 vscode "mads-hartmann.bash-ide-vscode"
 vscode "mgmcdermott.vscode-language-babel"
+vscode "ms-azuretools.vscode-containers"
 vscode "ms-azuretools.vscode-docker"
 vscode "ms-ceintl.vscode-language-pack-ja"
 vscode "ms-playwright.playwright"
@@ -95,6 +99,7 @@ vscode "ms-python.debugpy"
 vscode "ms-python.isort"
 vscode "ms-python.python"
 vscode "ms-python.vscode-pylance"
+vscode "ms-python.vscode-python-envs"
 vscode "ms-vscode-remote.remote-containers"
 vscode "ms-vscode-remote.remote-ssh"
 vscode "ms-vscode-remote.remote-ssh-edit"
